--- a/themes/paper.css
+++ b/themes/paper.css
@@ -1,20 +1,28 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  font-family: "Avenir Next", serif;
+  font-family: 'Avenir Next', serif;
   font-size: 12px;
-  padding: 0;
+  padding: 2cm;
 }
 
 /* Headers */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 10px 0;
   font-weight: bold;
 }
@@ -23,7 +31,12 @@ h1 {
   margin-top: 0;
 }
 
-h1 em, h2 em, h3 em, h4 em, h5 em, h6 em {
+h1 em,
+h2 em,
+h3 em,
+h4 em,
+h5 em,
+h6 em {
   font-weight: normal;
 }
 
@@ -45,7 +58,7 @@ a[href] {
 }
 
 a[href]:after {
-  content: "";
+  content: '';
 }
 
 /* Typography */
@@ -74,7 +87,7 @@ code {
   background-color: #eeeeee;
   border-radius: 3px;
   padding: 1px 5px;
-  font-family: Menlo, Monaco, "Courier New", Courier, monospace;
+  font-family: Menlo, Monaco, 'Courier New', Courier, monospace;
   font-size: smaller;
 }
 
@@ -125,7 +138,7 @@ ul {
 }
 
 .todo-list li:before {
-  content: "✔︎";
+  content: '✔︎';
   padding-right: 8px;
 }
 
